RESOLVED FIXED271076
Keyboard incorrectly duplicates certain text corrections/fill
https://bugs.webkit.org/show_bug.cgi?id=271076
Summary Keyboard incorrectly duplicates certain text corrections/fill
Richard Robinson
Reported 2024-03-15 13:16:22 PDT
Attachments
Richard Robinson
Comment 1 2024-03-15 13:21:08 PDT
EWS
Comment 2 2024-03-18 18:54:23 PDT
Committed 276317@main (215a08dbf9d4): <https://commits.webkit.org/276317@main> Reviewed commits have been landed. Closing PR #25967 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.