Keyboard incorrectly duplicates certain text corrections/fill https://bugs.webkit.org/show_bug.cgi?id=271076 rdar://123642870

Reviewed by Abrar Rahman Protyasha.

Add a quirk to disable the `writingsuggestions` web API for the affected sites.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::isWritingSuggestionsEnabled const):
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldDisableWritingSuggestionsQuirk const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/276317@main